# hello-world-stm32l0xx

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
Src/: main.c
